plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.version
group = project.group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Terraformers maven for ModMenu.
	maven { name = 'Terraformers'; url = 'https://maven.terraformersmc.com/' }
	// Shedaniel maven for Cloth Config.
	maven { name = 'Shedaniel'; url = 'https://maven.shedaniel.me/' }
	// Fayber Config is published to the local maven repo by its own `publishToMavenLocal`.
	mavenLocal()
	// Xaero's maven, for the World Map integration (compileOnly, never shipped: All Rights Reserved).
	maven {
		name = 'Xaero'
		url = 'https://chocolateminecraft.com/maven'
		content { includeGroupByRegex 'xaero.*' }
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// ModMenu and Cloth Config (optional, compileOnly on 26.x)
	compileOnly "com.terraformersmc:modmenu:18.0.0"
	compileOnly "me.shedaniel.cloth:cloth-config-fabric:26.1.154"

	// Fayber Config (optional, compileOnly; preferred over Cloth when installed at runtime).
	// runtimeOnly pulls it into the dev client too, so the dev boot exercises the integration.
	compileOnly "net.fayber:fayber-config:1.0.0"
	runtimeOnly "net.fayber:fayber-config:1.0.0"

	// Xaero's World Map (optional, compileOnly): our waypoints are registered as map elements
	// through its public element framework. Never a runtime dependency, never shipped
	// (All Rights Reserved). Pulls xaerolib transitively for the Tooltip type in ElementReader.
	compileOnly "xaero.map:xaeroworldmap-fabric-${project.minecraft_version}:1.45.0"
}

// Dev-only design workbench: `./gradlew runClient -PwpPreview=list|edit|new` boots the client at a
// fixed window size and auto-opens that waypoint screen with demo data (see tools/preview.sh,
// which grabs a frame off an Xvfb display so the GUI can be iterated on headlessly).
loom {
	runs {
		client {
			programArgs '--width', '1280', '--height', '720'
			if (project.hasProperty('wpPreview')) {
				vmArg "-Dwaypoints.preview=${project.property('wpPreview')}"
			}
		}
	}
}

processResources {
	inputs.property 'version', project.version
	inputs.property 'minecraft_version', project.minecraft_version
	inputs.property 'loader_version', project.loader_version
	filesMatching('fabric.mod.json') {
		expand 'version': project.version,
				'minecraft_version': project.minecraft_version,
				'loader_version': project.loader_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from('LICENSE') {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}
